Whitespace fix

--- a/resources/sass/homecontent.scss
+++ b/resources/sass/homecontent.scss
@@ -222,12 +222,14 @@
         input {
             width: 100% !important;
             position: relative;
+            top: -10%;
         }
     }
 
     .about-wrapper {
         article {
             width: 100% !important;
+            padding: 1em !important;
         }
 
         img {
@@ -245,7 +247,7 @@
             background: $primaryColor !important;
             border-radius: 0px !important;
             justify-content: center !important;
-            padding: 0px 0px 0px 0px !important;
+            padding: 0px !important;
             // border: 2px solid black;
         }
     }
